# axion-project

./: .gitignore  pyproject.toml
axion_RL/tutorial/: freecad_test.ipynb
axion_RL/tutorial/EDPPO/: EDPPO_agent_v1.py  EDPPO_env_v1.py  EDPPO_main.py  EDPPO_mesh_util.py  EDPPO_network_v1.py
